@@ -1,6 +1,6 @@
 # ELK
 
-## Подготовка. Создание необходимых директорий для ролей. Определение драйверов и сценариев
+## Подготовка. Создание необходимых директорий для ролей. 
 
 ```shell
 netology@netology:~/Projects/elk/roles$ ansible-galaxy role init elasticsearch
@@ -11,437 +11,190 @@ netology@netology:~/Projects/elk/roles$ ansible-galaxy role init logstash
 - Role logstash was created successfully
 netology@netology:~/Projects/elk/roles$ ansible-galaxy role init filebeat
 - Role filebeat was created successfully
-```
+netology@netology:~/Projects/elk/roles$ ansible-galaxy role init application
+- Role application was created successfully
 
+netology@netology:~/Projects/elk$ sudo sysctl -w vm.max_map_count=262144
+[sudo] пароль для netology: 
+vm.max_map_count = 262144
+```
+* `site.yml`:
+```yaml
+---
+- name: Work with elasticsearch-role
+  gather_facts: false
+  hosts:
+    - localhost
+  roles:
+    - elasticsearch
+- name: Work with kibana-role
+  gather_facts: false
+  hosts:
+    - localhost
+  roles:
+    - kibana
+- name: Work with logstash-role
+  gather_facts: false
+  hosts:
+    - localhost
+  roles:
+    - logstash
+- name: Work with filebeat-role
+  gather_facts: false
+  hosts:
+    - localhost
+  roles:
+    - filebeat
+- name: Work with application
+  gather_facts: false
+  hosts:
+    - localhost
+  roles:
+    - application
+```
+* Многие задачи с поднятием контейнера либо не содержат `volume's` с файлами конфигурации, либо содержат тома только с указанием директории
+* В каждой роли в `templates`-директории можно увидеть, что файлы с конфигурациями были подготовлены. Однако первые попытки запуска контейнера с передачей в томе конкретного файла падали с ошибкой, что `volume` - не директория. 
+* Поэтому в `elasticsearch`, `kibana` - используются глобальные переменные, в `logstash` изначально использовалась директория с файлами, которые предварительно были изучены в ручном запуске контейнера и скопированы на свой хост.
+* Истина с работой с `volume` и конкретным файлом открылась мне с `filebeat`: рабочая директория в контейнере, по умолчанию, `/usr/share/filebeat`, где нет отдельных директорий `config`, как в других ролях. Все файлы с настройками и исполняемый лежат в рабочей директории. Передача директории в томе с исполняемым файлом не имела смысла, поэтому пришлось повозиться. А дело оказалось в добавлении `:ro` к `volume` запускаемого контейнера. 
+* В связи с этим, запуск контейнера с `logstash` был скорректирован 
+
+------------------------------------------------------------------------
 ### Elasticsearch
 
-```shell
-netology@netology:~/Projects/elk/roles$ cd elasticsearch/
-netology@netology:~/Projects/elk/roles/elasticsearch$ molecule init scenario --driver-name docker 
-INFO     Initializing new scenario default...
-INFO     Initialized scenario in /home/netology/Projects/elk/roles/elasticsearch/molecule/default successfully.
-```
---------------------------------------------------------------
-
-* `molecule.yml`:
+* `tasks/main.yml`:
 
 ```yaml
 ---
-dependency:
-  name: galaxy
-driver:
-  name: docker
-lint: |
-  ansible-lint .
-  yamllint .
-platforms:
-  - name: es-hot
+- name: Create network
+  docker_network:
+    name: elastic
+    appends: yes
+    state: present
+- name: Pull elastic image
+  docker_image:
+    name: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
+    source: pull
+- name: Start es-warm container
+  docker_container:
+    name: es-warm
     image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
-    pre_build_image: true
-    volumes:
-      - data01:/usr/share/elasticsearch/data
-    # ulimits:
-    #   memlock:
-    #     soft: "-1"
-    #     hard: "-1"
-    #   nofile:
-    #     soft: "65536"
-    #     hard: "65536"
-    ports:
-      - 9200:9200
-    network:
-      - elastic
-    depends_on:
-      - es-warm
-    groups:
-      - elk
-  - name: es-warm
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
-    pre_build_image: true
+    state: started
+    env:
+      cluster.initial_master_nodes: "es-hot,es-warm"
+      bootstrap.memory_lock: "true"
+      cluster.name: "es-docker-cluster"
+      node.name: "es-warm"
+      discovery.seed_hosts: "es-hot"
+      ES_JAVA_OPTS: "-Xms4g -Xmx4g"
     volumes:
       - data02:/usr/share/elasticsearch/data
-    # ulimits:
-    #   memlock:
-    #     soft: "-1"
-    #     hard: "-1"
-    #   nofile:
-    #     soft: "65536"
-    #     hard: "65536"
-    network:
-      - elastic
-    groups:
-      - elk
-provisioner:
-  name: ansible
-  log: true
-  options:
-    vvv: true
-    diff: true
-  inventory:
-    host_vars:
-      es-hot:
-        elk_id: 0
-      es-warm:
-        elk_id: 1
-
-verifier:
-  name: ansible
-
+    ulimits:
+      - memlock:-1:-1
+      - nofile:65536:65536
+    networks:
+      - name: elastic
+- name: Add es-warm in inventory
+  add_host:
+    name: es-warm
+    ansible_connection: docker
+- name: Start es-hot container
+  docker_container:
+    name: es-hot
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
+    state: started
+    env:
+      cluster.initial_master_nodes: "es-hot,es-warm"
+      bootstrap.memory_lock: "true"
+      cluster.name: "es-docker-cluster"
+      node.name: "es-hot"
+      discovery.seed_hosts: "es-warm"
+      ES_JAVA_OPTS: "-Xms4g -Xmx4g"
+    volumes:
+      - data01:/usr/share/elasticsearch/data
+    ulimits:
+      - memlock:-1:-1
+      - nofile:262144:262144
+    ports:
+      - 9200:9200
+    networks:
+      - name: elastic
+        links:
+          - es-warm
+- name: Add es-hot in inventory
+  add_host:
+    name: es-hot
+    ansible_connection: docker
 ```
---------------------------------------------------------
-
-* `install.yml`:
-
-```yaml
----
-- name: Check for Python
-  raw: test -e /usr/bin/python
-  changed_when: false
-  failed_when: false
-  register: check_python
-- name: Install Python
-  raw: apt -y update && apt install -y python
-  when: check_python.rc != 0
-- name: Update repositories cache and install "python" package
-  apt:
-    update_cache: yes
-```
-----------------------------------------------------------
-
-* `configure.yml`:
-
-```yaml
----
-- name: Configure Elasticsearch
-  template:
-    src: elasticsearch.yml.j2
-    mode: 0644
-    dest: /usr/share/elasticsearch/config/elasticsearch.yml
-```
-----------------------------------------------------------------------
-
-* `elasticsearch.yml.j2`:
-```yaml
-path.data: /var/lib/elasticsearch
-path.logs: /var/log/elasticsearch
-network.host: 0.0.0.0
-cluster.initial_master_nodes: es-hot,es-warm
-bootstrap.memory_lock: true
-cluster.name: es-docker-cluster
-"ES_JAVA_OPTS=-Xms512m -Xmx512m"
-{% if inventory_hostname == 'es-hot' %}
-node.name: es-hot
-discovery.seed_hosts: es-warm
-{% elif inventory_hostname == 'es-warm' %}
-node.name: es-warm
-discovery.seed_hosts: es-hot
-{% endif %}
-```
-----------------------------------------------------------------------
-
-* `main.yml`:
-
-```yaml
----
-- include_tasks: "install.yml"
-- import_tasks: configure.yml
-```
-
-* [Лог](logs/01.md) запуска `molecule test`
-* [Лог](logs/02.md) запуска `molecule converge`
 
 ------------------------------------------------------------------------
-
 ### Kibana
 
-```shell
-netology@netology:~/Projects/elk/roles/kibana$ molecule init scenario --driver-name docker 
-INFO     Initializing new scenario default...
-INFO     Initialized scenario in /home/netology/Projects/elk/roles/kibana/molecule/default successfully.
-```
-* `molecule.yml`:
+* `tasks/main.yml`:
 
 ```yaml
 ---
-dependency:
-  name: galaxy
-driver:
-  name: docker
-lint: |
-  ansible-lint .
-  yamllint .
-platforms:
-  - name: kibana
+- name: Pull kibana image
+  docker_image:
+    name: docker.elastic.co/kibana/kibana:7.16.3
+    source: pull
+- name: Start kibana container
+  docker_container:
+    name: kibana
     image: docker.elastic.co/kibana/kibana:7.16.3
-    pre_build_image: true
+    state: started
+    env:
+      ELASTICSEARCH_URL: "http://es-hot:9200"
+      ELASTICSEARCH_HOSTS: '["http://es-hot:9200","http://es-warm:9200"]'
     ports:
       - 5601:5601
-    network:
-      - elastic
-    depends_on:
-      - es-hot
-      - es-warm
-    groups:
-      - elk
-provisioner:
-  name: ansible
-  log: true
-  options:
-    vvv: true
-    diff: true
-  inventory:
-    host_vars:
-      kibana:
-        elk_id: 2
-verifier:
-  name: ansible
+    networks:
+      - name: elastic
+        links:
+          - es-hot
+          - es-warm
+- name: Add kibana in inventory
+  add_host:
+    name: kibana
+    ansible_connection: docker
 ```
----------------------------------------------------------------------------
-
-* `tasks/main.yml`:
-
-```yaml
----
-- name: Configure Kibana
-  template:
-    src: kibana.yml.j2
-    mode: 0644
-    dest: /usr/share/kibana/config/kibana.yml
-```
----------------------------------------------------------------------------
-
-* `kibana.yml.j2`:
-
-```yaml
-server.host: "0.0.0.0"
-server.shutdownTimeout: "5s"
-monitoring.ui.container.elasticsearch.enabled: true
-elasticsearch.url: "http://es-hot:9200"
-elasticsearch.hosts: ["http://es-hot:9200","http://es-warm:9200"]
-```
----------------------------------------------------------------------------
-
-* [Лог](logs/03.md) запуска `molecule test`
-* [Лог](logs/04.md) запуска `molecule converge`
 
 ------------------------------------------------------------------------
-
 ### Logstash
 
-```shell
-netology@netology:~/Projects/elk/roles/logstash$ molecule init scenario --driver-name docker 
-INFO     Initializing new scenario default...
-INFO     Initialized scenario in /home/netology/Projects/elk/roles/logstash/molecule/default successfully.
-```
-
----------------------------------------------------------------------------
-
-* `molecule.yml`:
+* Список передаваемых файлов в томе [тут](roles/logstash/templates/config).
+* `tasks/main.yml`:
 
 ```yaml
 ---
-dependency:
-  name: galaxy
-driver:
-  name: docker
-lint: |
-  ansible-lint .
-  yamllint .
-platforms:
-  - name: logstash
+- name: Pull logstash image
+  docker_image:
+    name: docker.elastic.co/logstash/logstash:7.16.3
+    source: pull
+- name: Start logstash container
+  docker_container:
+    name: logstash
     image: docker.elastic.co/logstash/logstash:7.16.3
-    pre_build_image: true
+    volumes:
+      - /home/netology/Projects/elk/roles/logstash/templates/logstash.conf.j2:/etc/logstash/conf.d/logstash.conf:ro
+      - /home/netology/Projects/elk/roles/logstash/templates/logstash.yml.j2:/opt/logstash/config/logstash.yml:ro
+    state: started
     ports:
       - 5046:5046
-    network:
-      - elastic
-    depends_on:
-      - es-hot
-      - es-warm
-    groups:
-      - elk
-provisioner:
-  name: ansible
-  log: true
-  options:
-    vvv: true
-    diff: true
-  inventory:
-    host_vars:
-      logstash:
-        elk_id: 3
-verifier:
-  name: ansible
+    networks:
+      - name: elastic
+        links:
+          - es-hot
+          - es-warm
+- name: Add logstash in inventory
+  add_host:
+    name: logstash
+    ansible_connection: docker
 ```
+------------------------------------------------------------------------
+### Filebeat
 
----------------------------------------------------------------------------
-
-* `tasks/main.yml`:
-
+* `templates/filebeat.yml`:
 ```yaml
----
-- name: Configure jvm
-  template:
-    src: jvm.options.j2
-    mode: 0755
-    dest: /usr/share/logstash/config/jvm.options
-- name: Configure Logstash
-  template:
-    src: logstash.conf.j2
-    mode: 0755
-    dest: /usr/share/logstash/config/logstash.conf
-- name: Configure with yml Logstash
-  template:
-    src: logstash.yml.j2
-    mode: 0755
-    dest: /usr/share/logstash/config/logstash.yml
-```
----------------------------------------------------------------------------
-
-* `jvm.options.j2`:
-
-```shell
-## G1GC Configuration
-
-10-:-XX:+UseG1GC
-10-13:-XX:-UseConcMarkSweepGC
-10-13:-XX:-UseCMSInitiatingOccupancyOnly
-10-:-XX:G1ReservePercent=25
-10-:-XX:InitiatingHeapOccupancyPercent=30
-
-## JVM temporary directory
--Djava.io.tmpdir=${ES_TMPDIR}
-
-## heap dumps
-
-# generate a heap dump when an allocation from the Java heap fails
-# heap dumps are created in the working directory of the JVM
--XX:+HeapDumpOnOutOfMemoryError
-
-# specify an alternative path for heap dumps; ensure the directory exists and
-# has sufficient space
--XX:HeapDumpPath=data
-
-# specify an alternative path for JVM fatal error logs
--XX:ErrorFile=logs/hs_err_pid%p.log
-
-# JDK 9+ GC logging
-8-9:-Xmx2g
-# 9-:-Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m
-```
----------------------------------------------------------------------------
-
-* `logstash.conf.j2`:
-
-```shell
-input {
-  beats {
-    port => 5044
-  }
-}
-filter {
- if [type] == "nginx_access" {
-    grok {
-        match => { "message" => "%{IPORHOST:remote_ip} - %{DATA:user} \[%{HTTPDATE:access_time}\] \"%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code} %{NUMBER:body_sent_bytes} \"%{DATA:referrer}\" \"%{DATA:agent}\"" }
-    }
-  }
-  date {
-        match => [ "timestamp" , "dd/MMM/YYYY:HH:mm:ss Z" ]
-  }
-  geoip {
-     database => "/etc/logstash/GeoLite2-City.mmdb"
-     source => "remote_ip"
-     target => "geoip"
-     add_tag => [ "nginx-geoip" ]
-    }
-}
-output {
-  elasticsearch {
-    hosts => ["http://es-hot:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
-    #user => "elastic"
-    #password => "changeme"
-  }
-}
-```
----------------------------------------------------------------------------
-
-* `logstash.yml.j2`:
-
-```yaml
-pipeline.id: netology
-pipeline.workers: 1
-pipeline.batch.size: 1
-path.settings: /etc/logstash
-path.config: /etc/logstash
-http.host: "0.0.0.0"
-```
----------------------------------------------------------------------------
-
-* [Лог](logs/05.md) запуска `molecule test`
-* [Лог](logs/06.md) запуска `molecule converge`
-
----------------------------------------------------------------------------
-
-#### Filebeat
-
-```shell
-netology@netology:~/Projects/elk/roles/filebeat$ molecule init scenario --driver-name docker
-INFO     Initializing new scenario default...
-INFO     Initialized scenario in /home/netology/Projects/elk/roles/filebeat/molecule/default successfully.
-```
-
-* `molecule.yml`:
-```yaml
----
-dependency:
-  name: galaxy
-driver:
-  name: docker
-lint: |
-  ansible-lint .
-  yamllint .
-platforms:
-  - name: filebeat
-    image: docker.elastic.co/beats/filebeat:7.16.3
-    privileged: true
-    user: root
-    pre_build_image: true
-    volumes:
-      - /var/lib/docker:/var/lib/docker
-      - /var/run/docker.sock:/var/run/docker.sock
-    network:
-      - elastic
-    depends_on:
-      - logstash
-    groups:
-      - elk
-provisioner:
-  name: ansible
-  log: true
-  options:
-    vvv: true
-    diff: true
-  inventory:
-    host_vars:
-      filebeat:
-        elk_id: 4
-verifier:
-  name: ansible
-```
-
-* `tasks/main.yml`:
-```yaml
----
-- name: Configure Filebeat
-  template:
-    src: filebeat.yml.j2
-    dest: /usr/share/filebeat/filebeat.yml
-    mode: 0644
-```
-
-* `filebeat.yml.j2`:
-```shell
 filebeat.inputs:
   - type: container
     paths:
@@ -466,17 +219,256 @@ logging.json: true
 logging.metrics.enabled: false
 ```
 
-* [Лог](logs/07.md) запуска `molecule test`
-* [Лог](logs/08.md) запуска `molecule converge`
+* `tasks/main.yml`:
 
-------------------------------------------------------------------------------------
+```yaml
+---
+- name: Pull logstash image
+  docker_image:
+    name: docker.elastic.co/beats/filebeat:8.0.0
+    source: pull
+- name: Start filebeat container
+  docker_container:
+    name: filebeat
+    image: docker.elastic.co/beats/filebeat:8.0.0
+    state: started
+    privileged: true
+    user: root
+    volumes:
+      - /home/netology/Projects/elk/roles/filebeat/templates/filebeat.yml:/usr/share/filebeat.yml:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - name: elastic
+        links:
+          - logstash
+```
+------------------------------------------------------------------------
+### Application
+
+* `tasks/main.yml`:
+
+```yaml
+---
+- name: Pull python:3.9-alpine image
+  docker_image:
+    name: library/python:3.9-alpine
+    source: pull
+- name: Start application container
+  docker_container:
+    name: some_app
+    image: library/python:3.9-alpine
+    state: started
+    volumes:
+      - /home/netology/Projects/elk/roles/application/templates/run.py:/opt/run.py:ro
+    entrypoint: python3 /opt/run.py
+- name: Add application in inventory
+  add_host:
+    name: application
+    ansible_connection: docker
+
+```
+------------------------------------------------------------------------
+
+## Запуск playbook
 
 ```shell
-netology@netology:~/Projects/elk$ ansible-galaxy collection install community.docker
-Starting galaxy collection install process
-Process install dependency map
-Starting collection install process
-Downloading https://galaxy.ansible.com/download/community-docker-2.1.1.tar.gz to /home/netology/.ansible/tmp/ansible-local-13935p61p6vf2/tmprffesofl/community-docker-2.1.1-7t5x5f7o
-Installing 'community.docker:2.1.1' to '/home/netology/.ansible/collections/ansible_collections/community/docker'
-community.docker:2.1.1 was installed successfully
+netology@netology:~/Projects/elk$ ansible-playbook site.yml
+[WARNING]: provided hosts list is empty, only localhost is available. Note that the implicit localhost does not match 'all'
+
+PLAY [Work with elasticsearch-role] ************************************************************************************************************************************************************
+
+TASK [elasticsearch : Create network] **********************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Pull elastic image] ******************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Start es-warm container] *************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Add es-warm in inventory] ************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Start es-hot container] **************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Add es-hot in inventory] *************************************************************************************************************************************************
+changed: [localhost]
+
+PLAY [Work with kibana-role] *******************************************************************************************************************************************************************
+
+TASK [kibana : Start kibana container] *********************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [kibana : Add kibana in inventory] ********************************************************************************************************************************************************
+changed: [localhost]
+
+PLAY [Work with logstash-role] *****************************************************************************************************************************************************************
+
+TASK [logstash : Start logstash container] *****************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [logstash : Add logstash in inventory] ****************************************************************************************************************************************************
+changed: [localhost]
+
+PLAY [Work with filebeat-role] *****************************************************************************************************************************************************************
+
+TASK [filebeat : Start filebeat container] *****************************************************************************************************************************************************
+netology@netology:~/Projects/elk$ ansible-playbook site.yml
+[WARNING]: provided hosts list is empty, only localhost is available. Note that the implicit localhost does not match 'all'
+
+PLAY [Work with elasticsearch-role] ************************************************************************************************************************************************************
+
+TASK [elasticsearch : Create network] **********************************************************************************************************************************************************
+ok: [localhost]
+
+TASK [elasticsearch : Pull elastic image] ******************************************************************************************************************************************************
+ok: [localhost]
+
+TASK [elasticsearch : Start es-warm container] *************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Add es-warm in inventory] ************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Start es-hot container] **************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [elasticsearch : Add es-hot in inventory] *************************************************************************************************************************************************
+changed: [localhost]
+
+PLAY [Work with kibana-role] *******************************************************************************************************************************************************************
+
+TASK [kibana : Pull kibana image] **************************************************************************************************************************************************************
+ok: [localhost]
+
+TASK [kibana : Start kibana container] *********************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [kibana : Add kibana in inventory] ********************************************************************************************************************************************************
+changed: [localhost]
+
+PLAY [Work with logstash-role] *****************************************************************************************************************************************************************
+
+TASK [logstash : Pull logstash image] **********************************************************************************************************************************************************
+ok: [localhost]
+
+TASK [logstash : Start logstash container] *****************************************************************************************************************************************************
+changed: [localhost]
+
+TASK [logstash : Add logstash in inventory] ****************************************************************************************************************************************************
+changed: [localhost]
+
+PLAY [Work with filebeat-role] *****************************************************************************************************************************************************************
+
+TASK [filebeat : Pull logstash image] **********************************************************************************************************************************************************
+ok: [localhost]
+
+TASK [filebeat : Start filebeat container] *****************************************************************************************************************************************************
+changed: [localhost]
+
+PLAY [Work with application] *******************************************************************************************************************************************************************
+
+TASK [application : Pull python:3.9-alpine image] **********************************************************************************************************************************************
+ok: [localhost]
+
+TASK [application : Start application container] ***********************************************************************************************************************************************
+[DEPRECATION WARNING]: The command_handling option will change its default value from "compatibility" to "correct" in community.docker 3.0.0. To remove this warning, please specify an 
+explicit value for it now. This feature will be removed from community.docker in version 3.0.0. Deprecation warnings can be disabled by setting deprecation_warnings=False in ansible.cfg.
+changed: [localhost]
+
+TASK [application : Add application in inventory] **********************************************************************************************************************************************
+changed: [localhost]
+
+PLAY RECAP *************************************************************************************************************************************************************************************
+localhost                  : ok=17   changed=11   unreachable=0    failed=0    skipped=0    rescued=0    ignored=0   
+
+----------------------------------------------------------------------------------------------
+
+```
+* Запущенные контейнеры:
+
+```shell
+netology@netology:~$ docker ps
+CONTAINER ID   IMAGE                                                  COMMAND                  CREATED          STATUS          PORTS                                        NAMES
+2b39a3b06d91   docker.elastic.co/beats/filebeat:8.0.0                 "/usr/bin/tini -- /u…"   21 minutes ago   Up 21 minutes                                                filebeat
+52a4e625226b   docker.elastic.co/logstash/logstash:7.16.3             "/usr/local/bin/dock…"   21 minutes ago   Up 21 minutes   5044/tcp, 9600/tcp, 0.0.0.0:5046->5046/tcp   logstash
+18d6a8c388e2   docker.elastic.co/kibana/kibana:7.16.3                 "/bin/tini -- /usr/l…"   21 minutes ago   Up 21 minutes   0.0.0.0:5601->5601/tcp                       kibana
+6e54809554e7   docker.elastic.co/elasticsearch/elasticsearch:7.16.3   "/bin/tini -- /usr/l…"   21 minutes ago   Up 21 minutes   0.0.0.0:9200->9200/tcp, 9300/tcp             es-hot
+75ffdc90ab23   docker.elastic.co/elasticsearch/elasticsearch:7.16.3   "/bin/tini -- /usr/l…"   21 minutes ago   Up 21 minutes   9200/tcp, 9300/tcp                           es-warm
+1f8931468048   python:3.9-alpine  
+```
+
+![01](logs/pictures/01.png)
+
+* Ответ `elasticsearch`:
+
+```shell
+netology@netology:~$ curl -XGET http://localhost:9200
+{
+  "name" : "es-hot",
+  "cluster_name" : "es-docker-cluster",
+  "cluster_uuid" : "0mW43-wgSSKYnh7v3W2rmg",
+  "version" : {
+    "number" : "7.16.3",
+    "build_flavor" : "default",
+    "build_type" : "docker",
+    "build_hash" : "4e6e4eab2297e949ec994e688dad46290d018022",
+    "build_date" : "2022-01-06T23:43:02.825887787Z",
+    "build_snapshot" : false,
+    "lucene_version" : "8.10.1",
+    "minimum_wire_compatibility_version" : "6.8.0",
+    "minimum_index_compatibility_version" : "6.0.0-beta1"
+  },
+  "tagline" : "You Know, for Search"
+}
+netology
+```
+
+![02](logs/pictures/02.png)
+
+* `kibana`:
+
+![03](logs/pictures/03.png)
+
+-----------------------------------------------------------------------------------------
+
+* Создание индексов с CLI:
+
+```shell
+netology@netology:~/Projects/ci_cd$ curl -XPUT localhost:9200/ind-1 -H 'Content-Type: application/json' -d '{"settings": {"number_of_shards": 1, "number_of_replicas": 0}}'
+{"acknowledged":true,"shards_acknowledged":true,"index":"ind-1"} 
+netology@netology:~/Projects/ci_cd$ curl -XPUT localhost:9200/ind-2 -H 'Content-Type: application/json' -d '{"settings": {"number_of_shards": 2, "number_of_replicas": 1}}'
+{"acknowledged":true,"shards_acknowledged":true,"index":"ind-2"} 
+netology@netology:~/Projects/ci_cd$ curl -XPUT localhost:9200/ind-3 -H 'Content-Type: application/json' -d '{"settings": {"number_of_shards": 4, "number_of_replicas": 2}}'
+{"acknowledged":true,"shards_acknowledged":true,"index":"ind-3"}
+netology@netology:~/Projects/ci_cd$ curl -XGET localhost:9200/_cat/indices/ind*?v
+health status index uuid                   pri rep docs.count docs.deleted store.size pri.store.size
+green  open   ind-1 XpgwYt_XSXmstZpHXb81Dw   1   0          0            0       226b           226b
+yellow open   ind-3 Ld-oRboVTw2uOnm43xkdCA   4   2          0            0      1.7kb           904b
+green  open   ind-2 PcpF51jNTIuHUEgC2h7VwQ   2   1          0            0       904b           452b
+```
+
+* Состояние кластера:
+
+```shell
+netology@netology:~/Projects/ci_cd$ curl -XGET localhost:9200/_cluster/health/ind*?pretty
+{
+  "cluster_name" : "es-docker-cluster",
+  "status" : "yellow",
+  "timed_out" : false,
+  "number_of_nodes" : 2,
+  "number_of_data_nodes" : 2,
+  "active_primary_shards" : 7,
+  "active_shards" : 13,
+  "relocating_shards" : 0,
+  "initializing_shards" : 0,
+  "unassigned_shards" : 4,
+  "delayed_unassigned_shards" : 0,
+  "number_of_pending_tasks" : 0,
+  "number_of_in_flight_fetch" : 0,
+  "task_max_waiting_in_queue_millis" : 0,
+  "active_shards_percent_as_number" : 89.74358974358975
+}
 ```
